--- a/app/style.css
+++ b/app/style.css
@@ -112,7 +112,7 @@
 .carto-tabs a.tab {
   position: relative;
   border-right: 1px solid #d3d3d3;
-  height: 40px;
+  height: 39px;
   display: inline-block;
   width: 25%;
   padding: 10px;
@@ -121,7 +121,7 @@
 
 .carto-tabs a.tab:hover { color: rgba(0,0,0,.75));}
 .carto-tabs a.tab.active {
-  background:#f8f8f8;
+  background:white;
 }
 
 .carto-tabs a.tab .deltab {display:none;}
